support for key binding modifiers