@@ -28,8 +28,10 @@ import java.util.function.Predicate;
 public abstract class NewKeyBindsScreenMixin extends KeyBindsScreen {
     @Shadow
     private SortOrder sortOrder;
+
     @Shadow
     public abstract KeyBindsList getKeyBindsList();
+
     @Shadow
     protected abstract CustomList getCustomList();
 
@@ -38,10 +40,12 @@ public abstract class NewKeyBindsScreenMixin extends KeyBindsScreen {
     }
 
     /**
-     * Our custom key bindings cannot be sorted, so we must first remove them before sorting. After sorting, we add them back in place.
+     * Our custom key bindings cannot be sorted, so we must first remove them before
+     * sorting. After sorting, we add them back in place.
      */
     @WrapOperation(method = "filterKeys(Ljava/lang/String;)V", at = @At(value = "INVOKE", target = "Ljava/util/function/Consumer;accept(Ljava/lang/Object;)V"))
-    private void onFilterKeysSort(Consumer<List<NewKeyBindsList.KeyEntry>> instance, Object object, Operation<Void> original) {
+    private void onFilterKeysSort(Consumer<List<NewKeyBindsList.KeyEntry>> instance, Object object,
+            Operation<Void> original) {
         @SuppressWarnings("unchecked")
         List<NewKeyBindsList.Entry> entries = ((List<NewKeyBindsList.Entry>) object);
         CustomList list = this.getCustomList();
@@ -68,16 +72,19 @@ public abstract class NewKeyBindsScreenMixin extends KeyBindsScreen {
             if (entry instanceof NewKeyBindsList.KeyEntry keyEntry) {
                 String multiAction = "multi." + keyEntry.getKey().getName();
                 list.addEntryInternal(entry);
-                multiKeyBindingEntries.getOrDefault(multiAction, Collections.emptyList()).forEach(list::addEntryInternal);
+                multiKeyBindingEntries.getOrDefault(multiAction, List.of()).forEach(list::addEntryInternal);
             }
         }
     }
 
     /**
-     * If a child custom binding passes the filter predicate but its parent does not, retroactively add back the parent, but set it to be read-only.
+     * If a child custom binding passes the filter predicate but its parent does
+     * not, retroactively add back the parent, but set it to be read-only.
      */
     @WrapOperation(method = "filterKeys(Ljava/lang/String;)V", at = @At(value = "INVOKE", target = "Lcom/blamejared/searchables/api/SearchableType;filterEntries(Ljava/util/List;Ljava/lang/String;Ljava/util/function/Predicate;)Ljava/util/List;"))
-    private List<KeyBindsList.Entry> onFilterKeysFilter(SearchableType<KeyBindsList.Entry> instance, List<KeyBindsList.Entry> entries, String search, Predicate<KeyBindsList.Entry> predicate, Operation<List<KeyBindsList.Entry>> original) {
+    private List<KeyBindsList.Entry> onFilterKeysFilter(SearchableType<KeyBindsList.Entry> instance,
+            List<KeyBindsList.Entry> entries, String search, Predicate<KeyBindsList.Entry> predicate,
+            Operation<List<KeyBindsList.Entry>> original) {
         List<KeyBindsList.Entry> filtered = original.call(instance, entries, search, predicate);
 
         // Build a set of all parents that have children in the filtered list
@@ -97,7 +104,8 @@ public abstract class NewKeyBindsScreenMixin extends KeyBindsScreen {
                 KeyBindsList.Entry parent = child.getParentEntry();
 
                 // Only set hidden if the parent didn't match the filter itself
-                if (parent instanceof ControllingHideableKeyEntry hideableKeyEntry && !parentsInFiltered.contains(parent)) {
+                if (parent instanceof ControllingHideableKeyEntry hideableKeyEntry
+                        && !parentsInFiltered.contains(parent)) {
                     hideableKeyEntry.setHidden(true);
                 }
 
